@@ -93,7 +93,7 @@ FrameBuffer::~FrameBuffer() {
 	gl_free(zbuf);
 }
 
-Buffer* FrameBuffer::genOffscreenBuffer() {
+Buffer *FrameBuffer::genOffscreenBuffer() {
 	Buffer *buf = (Buffer *)gl_malloc(sizeof(Buffer));
 	buf->pbuf = (byte *)gl_malloc(this->ysize * this->linesize);
 	int size = this->xsize * this->ysize * sizeof(unsigned int);
@@ -108,7 +108,7 @@ void FrameBuffer::delOffscreenBuffer(Buffer *buf) {
 	gl_free(buf);
 }
 
-void FrameBuffer::clear( int clear_z, int z, int clear_color, int r, int g, int b ) {
+void FrameBuffer::clear(int clear_z, int z, int clear_color, int r, int g, int b) {
 	uint32 color;
 	byte *pp;
 
@@ -125,7 +125,7 @@ void FrameBuffer::clear( int clear_z, int z, int clear_color, int r, int g, int 
 	}
 }
 
-void FrameBuffer::blitOffscreenBuffer( Buffer* buf ) {
+void FrameBuffer::blitOffscreenBuffer(Buffer *buf) {
 	// TODO: could be faster, probably.
 	if (buf->used) {
 		for (int i = 0; i < this->xsize * this->ysize; ++i) {
@@ -140,7 +140,7 @@ void FrameBuffer::blitOffscreenBuffer( Buffer* buf ) {
 	}
 }
 
-void FrameBuffer::selectOffscreenBuffer( Buffer* buf ) {
+void FrameBuffer::selectOffscreenBuffer(Buffer *buf) {
 	if (buf) {
 		this->pbuf = buf->pbuf;
 		this->zbuf = buf->zbuf;
@@ -151,13 +151,13 @@ void FrameBuffer::selectOffscreenBuffer( Buffer* buf ) {
 	}
 }
 
-void FrameBuffer::clearOffscreenBuffer( Buffer* buf ) {
+void FrameBuffer::clearOffscreenBuffer(Buffer *buf) {
 	memset(buf->pbuf, 0, this->ysize * this->linesize);
 	memset(buf->zbuf, 0, this->ysize * this->xsize * sizeof(unsigned int));
 	buf->used = false;
 }
 
-void FrameBuffer::setTexture( const Graphics::PixelBuffer &texture ) {
+void FrameBuffer::setTexture(const Graphics::PixelBuffer &texture) {
 	current_texture = texture;
 }
 
