@@ -18,7 +18,8 @@ static const int NB_INTERP = 8;
 
 #define SAR_RND_TO_ZERO(v,n) (v / (1 << n))
 
-FORCEINLINE static void putPixelMapping(PIXEL *pp, unsigned int *pz, Graphics::PixelBuffer &texture, int _a, unsigned int &z,  unsigned int &t, unsigned int &s, int &dzdx, int &dsdx, int &dtdx) {
+FORCEINLINE static void putPixelMapping(PIXEL *pp, unsigned int *pz, Graphics::PixelBuffer &texture,
+                                        int _a, unsigned int &z,  unsigned int &t, unsigned int &s, int &dzdx, int &dsdx, int &dtdx) {
 	if (ZCMP(z, pz[_a])) {
 		pp[_a] = texture.getRawBuffer()[((t & 0x3FC00000) | s) >> 14];
 		pz[_a] = z;
@@ -28,7 +29,8 @@ FORCEINLINE static void putPixelMapping(PIXEL *pp, unsigned int *pz, Graphics::P
 	t += dtdx;
 }
 
-FORCEINLINE static void putPixelFlat(PIXEL *pp, unsigned int *pz, int _a, unsigned int &z, int color, int &dzdx) {
+FORCEINLINE static void putPixelFlat(PIXEL *pp, unsigned int *pz, int _a, unsigned int &z,
+                                     int color, int &dzdx) {
 	if (ZCMP(z, pz[_a])) {
 		pp[_a] = color;
 		pz[_a] = z;
@@ -43,7 +45,8 @@ FORCEINLINE static void putPixelDepth(unsigned int *pz, int _a, unsigned int &z,
 	z += dzdx;
 }
 
-FORCEINLINE static void putPixelSmooth(Graphics::PixelBuffer &buf, unsigned int *pz, int _a, unsigned int &z, int &tmp, unsigned int &rgb, int &dzdx, unsigned int &drgbdx) {
+FORCEINLINE static void putPixelSmooth(Graphics::PixelBuffer &buf, unsigned int *pz, int _a,
+                                       unsigned int &z, int &tmp, unsigned int &rgb, int &dzdx, unsigned int &drgbdx) {
 	if (ZCMP(z, pz[_a])) {
 		tmp = rgb & 0xF81F07E0;
 		buf.setPixelAt(_a, tmp | (tmp >> 16));
@@ -53,7 +56,10 @@ FORCEINLINE static void putPixelSmooth(Graphics::PixelBuffer &buf, unsigned int 
 	rgb = (rgb + drgbdx) & (~0x00200800);
 }
 
-FORCEINLINE static void putPixelMappingPerspective(Graphics::PixelBuffer &buf, Graphics::PixelFormat &textureFormat, Graphics::PixelBuffer &texture, unsigned int *pz, int _a, unsigned int &z, unsigned int &t, unsigned int &s, int &tmp, unsigned int &rgb, int &dzdx, int &dsdx, int &dtdx, unsigned int &drgbdx) {
+FORCEINLINE static void putPixelMappingPerspective(Graphics::PixelBuffer &buf,
+												   Graphics::PixelFormat &textureFormat, Graphics::PixelBuffer &texture, unsigned int *pz,
+												   int _a, unsigned int &z, unsigned int &t, unsigned int &s, int &tmp, unsigned int &rgb, 
+												   int &dzdx, int &dsdx, int &dtdx, unsigned int &drgbdx) {
 	if (ZCMP(z, pz[_a])) {
 		unsigned ttt = (t & 0x003FC000) >> (9 - PSZSH);
 		unsigned sss = (s & 0x003FC000) >> (17 - PSZSH);
@@ -389,22 +395,22 @@ void FrameBuffer::fillTriangle(ZBufferPoint *p0, ZBufferPoint *p1, ZBufferPoint 
 					}
 					while (n >= 3) {
 						if (drawLogic == DRAW_DEPTH_ONLY) {
-							putPixelDepth(pz,0,z,dzdx);
-							putPixelDepth(pz,1,z,dzdx);
-							putPixelDepth(pz,2,z,dzdx);
-							putPixelDepth(pz,3,z,dzdx);
+							putPixelDepth(pz, 0, z ,dzdx);
+							putPixelDepth(pz, 1, z, dzdx);
+							putPixelDepth(pz, 2, z, dzdx);
+							putPixelDepth(pz, 3, z, dzdx);
 						}
 						if (drawLogic == DRAW_FLAT) {
-							putPixelFlat(pp,pz,0,z,color,dzdx);
-							putPixelFlat(pp,pz,1,z,color,dzdx);
-							putPixelFlat(pp,pz,2,z,color,dzdx);
-							putPixelFlat(pp,pz,3,z,color,dzdx);
+							putPixelFlat(pp, pz, 0, z, color, dzdx);
+							putPixelFlat(pp, pz, 1, z, color, dzdx);
+							putPixelFlat(pp, pz, 2, z, color, dzdx);
+							putPixelFlat(pp, pz, 3, z, color, dzdx);
 						}
 						if (drawLogic == DRAW_MAPPING) {
-							putPixelMapping(pp,pz,texture,0,z,t,s,dzdx,dsdx,dtdx);
-							putPixelMapping(pp,pz,texture,1,z,t,s,dzdx,dsdx,dtdx);
-							putPixelMapping(pp,pz,texture,2,z,t,s,dzdx,dsdx,dtdx);
-							putPixelMapping(pp,pz,texture,3,z,t,s,dzdx,dsdx,dtdx);
+							putPixelMapping(pp, pz, texture, 0, z, t, s, dzdx, dsdx, dtdx);
+							putPixelMapping(pp, pz, texture, 1, z, t, s, dzdx, dsdx, dtdx);
+							putPixelMapping(pp, pz, texture, 2, z, t, s, dzdx, dsdx, dtdx);
+							putPixelMapping(pp, pz, texture, 3, z, t, s, dzdx, dsdx, dtdx);
 						}
 						if (interpZ) {
 							pz += 4;
@@ -414,13 +420,13 @@ void FrameBuffer::fillTriangle(ZBufferPoint *p0, ZBufferPoint *p1, ZBufferPoint 
 					}
 					while (n >= 0) {
 						if (drawLogic == DRAW_DEPTH_ONLY) {
-							putPixelDepth(pz,0,z,dzdx);
+							putPixelDepth(pz, 0, z, dzdx);
 						}
 						if (drawLogic == DRAW_FLAT) {
-							putPixelFlat(pp,pz,0,z,color,dzdx);
+							putPixelFlat(pp, pz, 0, z, color, dzdx);
 						}
 						if (drawLogic == DRAW_MAPPING) {
-							putPixelMapping(pp,pz,texture,0,z,t,s,dzdx,dsdx,dtdx);
+							putPixelMapping(pp, pz, texture, 0, z, t, s, dzdx, dsdx, dtdx);
 						}
 						if (interpZ) {
 							pz += 1;
@@ -499,7 +505,7 @@ void FrameBuffer::fillTriangle(ZBufferPoint *p0, ZBufferPoint *p1, ZBufferPoint 
 					buf = (byte *)pp1 + x1 * bpp;
 					pz = pz1 + x1;
 					z = z1;
-					rgb =(r1 << 16) & 0xFFC00000;
+					rgb = (r1 << 16) & 0xFFC00000;
 					rgb |= (g1 >> 5) & 0x000007FF;
 					rgb |= (b1 << 5) & 0x001FF000;
 					drgbdx = _drgbdx;
@@ -553,7 +559,8 @@ void FrameBuffer::fillTriangle(ZBufferPoint *p0, ZBufferPoint *p1, ZBufferPoint 
 							zinv = (float)(1.0 / fz);
 						}
 						for (int _a = 0; _a < 8; _a++) {
-							putPixelMappingPerspective(buf, textureFormat, texture, pz, _a, z, t, s, tmp, rgb, dzdx, dsdx, dtdx, drgbdx);
+							putPixelMappingPerspective(buf, textureFormat, texture, pz, _a, z, t, s, tmp, rgb, dzdx, dsdx, dtdx,
+							                           drgbdx);
 						}
 						pz += NB_INTERP;
 						buf.shiftBy(NB_INTERP);
@@ -575,7 +582,8 @@ void FrameBuffer::fillTriangle(ZBufferPoint *p0, ZBufferPoint *p1, ZBufferPoint 
 					int bytePerPixel = texture.getFormat().bytesPerPixel;
 
 					while (n >= 0) {
-						putPixelMappingPerspective(buf, textureFormat, texture, pz, 0, z, t, s, tmp, rgb, dzdx, dsdx, dtdx, drgbdx);
+						putPixelMappingPerspective(buf, textureFormat, texture, pz, 0, z, t, s, tmp, rgb, dzdx, dsdx, dtdx,
+						                           drgbdx);
 						pz += 1;
 						buf.shiftBy(1);
 						n -= 1;
@@ -649,7 +657,7 @@ void FrameBuffer::fillTriangleDepthOnly(ZBufferPoint *p0, ZBufferPoint *p1, ZBuf
 	const bool interpRGB = false;
 	const bool interpST = false;
 	const bool interpSTZ = false;
-	fillTriangle<interpRGB,interpZ,interpST,interpSTZ,DRAW_DEPTH_ONLY>(p0, p1, p2);
+	fillTriangle<interpRGB, interpZ, interpST, interpSTZ, DRAW_DEPTH_ONLY>(p0, p1, p2);
 }
 
 
@@ -658,17 +666,16 @@ void FrameBuffer::fillTriangleFlat(ZBufferPoint *p0, ZBufferPoint *p1, ZBufferPo
 	const bool interpRGB = false;
 	const bool interpST = false;
 	const bool interpSTZ = false;
-	fillTriangle<interpRGB,interpZ,interpST,interpSTZ,DRAW_FLAT>(p0, p1, p2);
+	fillTriangle<interpRGB, interpZ ,interpST, interpSTZ, DRAW_FLAT>(p0, p1, p2);
 }
 
 // Smooth filled triangle.
-// The code below is very tricky :) -- Not anymore :P
 void FrameBuffer::fillTriangleSmooth(ZBufferPoint *p0, ZBufferPoint *p1, ZBufferPoint *p2) {
 	const bool interpZ = true;
 	const bool interpRGB = true;
 	const bool interpST = false;
 	const bool interpSTZ = false;
-	fillTriangle<interpRGB,interpZ,interpST,interpSTZ,DRAW_SMOOTH>(p0, p1, p2);
+	fillTriangle<interpRGB, interpZ, interpST, interpSTZ, DRAW_SMOOTH>(p0, p1, p2);
 }
 
 void FrameBuffer::fillTriangleMapping(ZBufferPoint *p0, ZBufferPoint *p1, ZBufferPoint *p2) {
@@ -676,15 +683,16 @@ void FrameBuffer::fillTriangleMapping(ZBufferPoint *p0, ZBufferPoint *p1, ZBuffe
 	const bool interpRGB = false;
 	const bool interpST = true;
 	const bool interpSTZ = false;
-	fillTriangle<interpRGB,interpZ,interpST,interpSTZ,DRAW_MAPPING>(p0, p1, p2);
+	fillTriangle<interpRGB, interpZ, interpST, interpSTZ, DRAW_MAPPING>(p0, p1, p2);
 }
 
-void FrameBuffer::fillTriangleMappingPerspective(ZBufferPoint *p0, ZBufferPoint *p1, ZBufferPoint *p2) {
+void FrameBuffer::fillTriangleMappingPerspective(ZBufferPoint *p0, ZBufferPoint *p1,
+        ZBufferPoint *p2) {
 	const bool interpZ = true;
 	const bool interpRGB = true;
 	const bool interpST = false;
 	const bool interpSTZ = true;
-	fillTriangle<interpRGB,interpZ,interpST,interpSTZ,DRAW_MAPPING_PERSPECTIVE>(p0, p1, p2);
+	fillTriangle<interpRGB, interpZ, interpST, interpSTZ, DRAW_MAPPING_PERSPECTIVE>(p0, p1, p2);
 }
 
 void FrameBuffer::fillTriangleFlatShadowMask(ZBufferPoint *p0, ZBufferPoint *p1, ZBufferPoint *p2) {
@@ -692,7 +700,7 @@ void FrameBuffer::fillTriangleFlatShadowMask(ZBufferPoint *p0, ZBufferPoint *p1,
 	const bool interpRGB = false;
 	const bool interpST = false;
 	const bool interpSTZ = false;
-	fillTriangle<interpRGB,interpZ,interpST,interpSTZ,DRAW_SHADOW_MASK>(p0, p1, p2);
+	fillTriangle<interpRGB, interpZ, interpST, interpSTZ, DRAW_SHADOW_MASK>(p0, p1, p2);
 }
 
 void FrameBuffer::fillTriangleFlatShadow(ZBufferPoint *p0, ZBufferPoint *p1, ZBufferPoint *p2) {
@@ -700,7 +708,7 @@ void FrameBuffer::fillTriangleFlatShadow(ZBufferPoint *p0, ZBufferPoint *p1, ZBu
 	const bool interpRGB = false;
 	const bool interpST = false;
 	const bool interpSTZ = false;
-	fillTriangle<interpRGB,interpZ,interpST,interpSTZ,DRAW_SHADOW>(p0, p1, p2);
+	fillTriangle<interpRGB, interpZ, interpST, interpSTZ, DRAW_SHADOW>(p0, p1, p2);
 }
 
 
