@@ -1,6 +1,0 @@
-
-#include "graphics/tinygl/zbuffer.h"
-
-namespace TinyGL {
-
-} // end of namespace TinyGL
